[package]
name = "proxy-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json", "socks"]}
serde = {version = "1.0", features = ["derive"]}
thiserror = "1.0.30"
tokio = {version = "1.17.0", features = ["full"]}
anyhow = "1.0.55"
async-trait = "0.1.52"
# redis = { version = "0.21.5", features = ["tokio-comp", "aio", "connection-manager"] }
warp = "0.3"
futures = "0.3.21"