[package]
edition = "2021"
name = "proxy-service"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
reqwest = {version = "0.11", features = ["json", "socks"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = {version = "1.17.0", features = ["full"]}
# redis = { version = "0.21.5", features = ["tokio-comp", "aio", "connection-manager"] }
async-stream = "0.3.2"
futures = "0.3.21"
http = "0.2.6"
itertools = "0.10.3"
tokio-stream = "0.1.8"
warp = "0.3"
